avoid scrollbar if content is long

--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -185,7 +185,7 @@ $sidebar-spacing-base: 5px;
   right: 0;
   padding: 32px 32px 112px 12px;
   background: #ffffff;
-  height: 90vh;
+  min-height: 90vh;
   width: $rightbar-width;
   overflow-y: auto;
   top: 64px;
